[package]
name = "terra"
version = "0.1.0"
edition = "2021"
authors = ["Echo-Heo", "mazziechai"]
repository = "https://github.com/orbit-systems/terra"
license = "MPL-2.0"
exclude = ["/.githooks", "/.github", "/setup.sh"]
description = "Aphelion ISA assembler in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
